--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <div class="container">
     <h1>💐 Món quà nhỏ gửi tặng Ngày Phụ nữ Việt Nam 20/10 💝</h1>
-    <button onclick="location.href='qua20-10.html'">🎁 Mở Hộp Quà Đê Các Bạn 💖</button>
+    <button onclick="location.href='qua20-10.html'">🎁 Mở Hộp Quà Đi Các Bạn 💖</button>
   </div>
 
   <script>
@@ -183,4 +183,5 @@
     }, 3000);
   </script>
 </body>
+
 </html>
