--- a/qua20-10.html
+++ b/qua20-10.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>💖 Món quà 20/10 💐</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -13,7 +14,6 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      /* Nền hồng phấn nhẹ nhàng, tinh tế */
       background: linear-gradient(135deg, #fce4ec 0%, #f8bbd0 100%);
       font-family: 'Quicksand', sans-serif;
       text-align: center;
@@ -26,7 +26,6 @@
       color: #880e4f;
       font-family: 'Quicksand', sans-serif;
       font-size: 20px;
-      font-weight: 700;
       margin-top: 25px;
       animation: glowText 2.5s ease-in-out infinite alternate;
       text-shadow: 0 0 8px rgba(255, 182, 193, 0.7);
@@ -40,7 +39,9 @@
 
     /* Hộp quà */
     #gift-box {
-      width: 300px;
+      width: 300px; 
+      max-width: 80vw; /* Đảm bảo không quá rộng trên mobile */
+      height: auto;
       cursor: pointer;
       transition: transform 0.5s ease, box-shadow 0.5s ease;
       animation: pulse 2s infinite ease-in-out;
@@ -52,13 +53,11 @@
       transform: scale(1.05); 
       box-shadow: 0 15px 30px rgba(255, 105, 180, 0.6);
     }
-
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.05); }
       100% { transform: scale(1); }
     }
-
     .fade-out { animation: fadeOut 1s forwards; }
     @keyframes fadeOut {
       from { opacity: 1; transform: scale(1); }
@@ -68,12 +67,10 @@
     /* Thiệp */
     #card {
       display: none;
-      /* Background giấy trắng ngà, tinh tế */
       background: #fffcf8; 
       border-radius: 25px;
-      /* Box shadow glow sang trọng */
       box-shadow: 0 0 40px rgba(255, 105, 180, 0.6);
-      padding: 50px;
+      padding: 50px; /* PC */
       width: 85%;
       max-width: 650px;
       text-align: center;
@@ -88,10 +85,8 @@
       display: block;
       opacity: 1;
       transform: scale(1);
-      /* Ánh sáng glow mềm mại hơn */
       animation: glow 3s ease-in-out infinite alternate;
     }
-
     @keyframes glow {
       from { box-shadow: 0 0 25px rgba(255, 182, 193, 0.6); }
       to { box-shadow: 0 0 55px rgba(255, 105, 180, 0.8); }
@@ -101,7 +96,7 @@
     #card h1 {
       color: #b80050;
       font-family:'Playfair Display', serif;
-      font-size: 45px; /* Nhỏ hơn để chứa cả tên cô giáo và lớp */
+      font-size: 45px;
       margin-top: 10px;
       margin-bottom: 20px;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
@@ -109,7 +104,7 @@
 
     /* Nội dung lời chúc */
     #card p {
-      font-size: 22px; /* Nhỏ hơn một chút để chữ vừa vặn */
+      font-size: 22px; 
       color: #333;
       line-height: 1.8;
       font-family: 'Quicksand', sans-serif;
@@ -122,12 +117,11 @@
         color: #b80050;
     }
 
-    /* Hiệu ứng từng dòng */
     .line {
       opacity: 0;
       transform: translateY(15px);
-      display: block; /* Thay đổi thành block để mỗi dòng chiếm một hàng */
-      margin-bottom: 10px; /* Thêm khoảng cách giữa các dòng */
+      display: block; 
+      margin-bottom: 10px; 
     }
     .line.show {
       animation: lineUp 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
@@ -136,58 +130,33 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* Tim rơi (Ít, nhỏ và chậm hơn) */
-    .falling-heart {
-      position: fixed;
-      top: -10px;
-      pointer-events: none;
-      animation: fall 8s linear forwards;
-      z-index: 1;
-      opacity: 0.8;
-      filter: drop-shadow(0 0 1px #ff69b4);
-    }
-
-    @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); opacity: 0.8; }
-      100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
-    }
-
-    /* Tim bay khi click */
-    .click-heart {
-      position: fixed;
-      animation: floatUp 1.5s ease-out forwards;
-      font-size: 28px;
-      pointer-events: none;
-      filter: drop-shadow(0 0 5px #ff69b4);
-    }
-
-    @keyframes floatUp {
-      0% { transform: translateY(0) scale(1); opacity: 1; }
-      100% { transform: translateY(-100px) scale(2); opacity: 0; }
-    }
-
-    /* Pháo giấy */
-    .confetti {
-      position: fixed;
-      width: 8px;
-      height: 8px;
-      background-color: pink;
-      opacity: 0.9;
-      animation: confetti-fall 4s ease-out forwards;
-      z-index: 20;
-      border-radius: 50%;
-    }
-
-    @keyframes confetti-fall {
-      0% { transform: translateY(0) rotate(0); opacity: 1; }
-      100% { transform: translateY(100vh) rotate(720deg); opacity: 0; }
+    /* MEDIA QUERIES - ĐIỀU CHỈNH CHO THIẾT BỊ DI ĐỘNG */
+    @media (max-width: 600px) {
+      #note {
+        font-size: 16px;
+      }
+      #card {
+        padding: 30px 20px; /* Giảm padding trên mobile */
+        max-width: 95%;
+      }
+      #card h1 {
+        font-size: 32px; /* Giảm kích thước tiêu đề */
+      }
+      #card p {
+        font-size: 16px; /* Giảm kích thước lời chúc */
+        line-height: 1.6;
+      }
+      .signature {
+        font-size: 20px; /* Giảm kích thước chữ ký */
+        margin-top: 20px;
+      }
     }
   </style>
 </head>
 <body>
 
   <img id="gift-box" src="1.jpg" alt="Hộp quà">
-  <div id="note">💬 Nhấn vào hộp quà để mở nhé 💖</div>
+  <div id="note">💬 Nhấn vào hộp quà để mở nhé, người thương 💖</div>
 
   <div id="card">
     <div style="font-size:60px; margin-bottom:15px; color:#ff69b4;">🌷🎉</div>
@@ -207,6 +176,7 @@
   </div>
 
   <script>
+    // Script giữ nguyên
     const giftBox = document.getElementById('gift-box');
     const card = document.getElementById('card');
     const note = document.getElementById('note');
@@ -215,12 +185,10 @@
     giftBox.addEventListener('click', () => {
       note.style.display = "none";
       
-      // Giả định có ảnh hộp quà đã mở (ví dụ: 2.png)
       giftBox.src = "2.png"; 
       giftBox.style.animation = "none";
       giftBox.style.cursor = "default";
 
-      // Pháo giấy
       for (let i = 0; i < 20; i++) {
         const conf = document.createElement("div");
         conf.classList.add("confetti");
@@ -233,14 +201,12 @@
         setTimeout(() => conf.remove(), 4000);
       }
 
-      // Hộp mờ dần, chuyển sang thiệp
       giftBox.classList.add("fade-out");
 
       setTimeout(() => {
         giftBox.style.display = "none";
         card.classList.add("show");
 
-        // Hiển thị từng dòng chậm hơn
         lines.forEach((line, i) => {
           setTimeout(() => line.classList.add('show'), i * 1200);
         });
