--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
   <div class="container">
     <h1>💐 Món quà nhỏ gửi tặng Ngày Phụ nữ Việt Nam 20/10 💝</h1>
-    <button onclick="location.href='qua20-10.html'">🎁 Mở Hộp Quà Đê Các Bạn 💖</button>
+    <button onclick="location.href='./qua20-10.html'">🎁 Mở Hộp Quà 💖</button>
   </div>
 
   <script>
@@ -208,3 +208,4 @@
   </script>
 </body>
 </html>
+
