--- a/qua20-10.html
+++ b/qua20-10.html
@@ -222,7 +222,7 @@
       transform: translateY(15px);
       /* Đổi từ inline-block sang block để ngắt dòng linh hoạt hơn */
       display: block; 
-      margin-bottom: 12px; /* Giảm margin một chút */
+      margin-bottom: 12px; 
       padding: 0; 
       text-align: center;
     }
@@ -285,7 +285,7 @@
         #card {
             border-radius: 15px; 
             border: 8px solid #fce4ec; 
-            padding: 25px 15px; /* Điều chỉnh padding ngang */
+            padding: 25px 15px; /* Tăng padding ngang cho nội dung */
             width: 95%; 
         }
         #card::before {
@@ -307,7 +307,7 @@
         #card p {
             font-size: 14px; 
             line-height: 1.6;
-            width: 100%; /* Đặt lại thành 100% vì đã có padding của #card */
+            width: 100%; /* Dùng 100% vì #card đã có padding */
             margin: 0 auto;
         }
         .signature {
@@ -315,10 +315,10 @@
             margin-top: 20px;
         }
         .line {
-            margin-bottom: 8px; /* Giảm thêm trên mobile */
+            margin-bottom: 8px; 
         }
         .card-main-icon {
-            padding: 3px; /* Giảm padding trên mobile */
+            padding: 3px; 
             font-size: 40px;
         }
     }
